; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/wps/extr_upnp_xml.c_xml_add_tagged_data.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/wps/extr_upnp_xml.c_xml_add_tagged_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wpabuf = type { i32 }

@.str = private unnamed_addr constant [5 x i8] c"<%s>\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"</%s>\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @xml_add_tagged_data(%struct.wpabuf* %0, i8* %1, i8* %2) #0 {
  %4 = alloca %struct.wpabuf*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store %struct.wpabuf* %0, %struct.wpabuf** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load %struct.wpabuf*, %struct.wpabuf** %4, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = call i32 @wpabuf_printf(%struct.wpabuf* %7, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* %8)
  %10 = load %struct.wpabuf*, %struct.wpabuf** %4, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = call i32 @os_strlen(i8* %12)
  %14 = call i32 @xml_data_encode(%struct.wpabuf* %10, i8* %11, i32 %13)
  %15 = load %struct.wpabuf*, %struct.wpabuf** %4, align 8
  %16 = load i8*, i8** %5, align 8
  %17 = call i32 @wpabuf_printf(%struct.wpabuf* %15, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i8* %16)
  ret void
}

declare dso_local i32 @wpabuf_printf(%struct.wpabuf*, i8*, i8*) #1

declare dso_local i32 @xml_data_encode(%struct.wpabuf*, i8*, i32) #1

declare dso_local i32 @os_strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
